--- a/monotonous-application/pom.xml
+++ b/monotonous-application/pom.xml
@@ -9,4 +9,18 @@
     <artifactId>monotonous-application</artifactId>
     <version>1.0</version>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.monotonous</groupId>
+            <artifactId>monotonous-service</artifactId>
+            <version>1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.monotonous</groupId>
+            <artifactId>monotonous-api</artifactId>
+            <version>1.0</version>
+        </dependency>
+    </dependencies>
+
+
 </project>
