--- a/monotonous-application/pom.xml
+++ b/monotonous-application/pom.xml
@@ -9,6 +9,13 @@
     <artifactId>monotonous-application</artifactId>
     <version>1.0</version>
 
+
+    <properties>
+        <java.version>1.8</java.version>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>com.monotonous</groupId>
@@ -22,5 +29,12 @@
         </dependency>
     </dependencies>
 
-
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 </project>
