--- a/monotonous-application/src/main/resources/application.yml
+++ b/monotonous-application/src/main/resources/application.yml
@@ -7,17 +7,17 @@ spring:
     name: monotonous
   main:
     allow-bean-definition-overriding: true
-  profiles:
-    active: master
+#  profiles:
+#    active: master
   mvc:
     format:
       date-time: yyyy-MM-dd HH:mm:ss
       date: dd/MM/yyyy
       time: HH:mm:ss
 
-mybatis:
-  mapper-locations: classpath:mapper/*.xml
-  type-aliases-package: com.monotonous.mapper
-  configuration.map-underscore-to-camel-case: true
+#mybatis:
+#  mapper-locations: classpath:mapper/*.xml
+#  type-aliases-package: com.monotonous.mapper
+#  configuration.map-underscore-to-camel-case: true
 
 
